# Solver

test/: test.lkshw
test/terms/: terms.cabal
test/terms/src/: Main.hs  Solve.hs
test/terms/test/: Main.hs
