name: terms
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

executable terms
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Solve
    ghc-options: -ferror-spans

test-suite test-terms
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
